TFP-4811 Fjerner henting av saker fra infotrygd